--- a/homework2/index.html
+++ b/homework2/index.html
@@ -18,6 +18,7 @@
         </div>
         <div id="log"></div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
